<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/dp_sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="112dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/dp"
                    android:text="dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/or"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/sp"
                    android:text="sp"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/type_textcolor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="112dp"
                android:layout_marginRight="16dp"
                android:hint="android:"
                android:id="@+id/q2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pickElement" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="112dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_parent"/>

            <CheckBox
                android:id="@+id/match_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_content"/>

            <CheckBox
                android:id="@+id/wrap_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrap_parent"/>

            <CheckBox
                android:id="@+id/wrap_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pickView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="112dp"
            android:orientation="vertical">



            <CheckBox
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_view"/>

            <CheckBox
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextView"/>

            <CheckBox
                android:id="@+id/Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textview"/>

            <CheckBox
                android:id="@+id/ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ImageView"/>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit_answers"
            android:layout_gravity="center|bottom"
            android:onClick="submit_answers"/>

    </LinearLayout>

</ScrollView>